<resources>
    <string name="app_name">疾病预测</string>
    <string name="toolbar_name">疾病预测</string>
    <string name="predict">疾病预测</string>
    <string name="ask_doctor">咨询医师</string>
    <string name="disease_find">疾病查询</string>
    <string name="health_knowledge">养生知识</string>
    <string name="about">关于</string>
    <string name="find_what">请输入你要搜索的内容...</string>
    <string name="about_appname">疾病预测Android Client</string>
    <string name="about_version">Version:1.0 By DX</string>
    <string name="author">本APP由邓希开发</string>
    <string name="contact">联系作者</string>
    <string name="introduce">软件介绍</string>
    <string name="start_hello">Developed by Dengxi of GMC.</string>
    <string name="about_declaration">声明：本软件仅供学习交流使用，切勿用于商业用途，否则后果自负。</string>
    <string name="back">返回</string>
    <string name="symbol">我的症状</string>
    <string name="commit">提交</string>
</resources>
