<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_predict"
            android:icon="@mipmap/ic_rate"
            android:title="@string/predict" />
        <item
            android:id="@+id/nav_ask"
            android:icon="@mipmap/ic_rate"
            android:title="@string/ask_doctor" />
        <item
            android:id="@+id/nav_find"
            android:icon="@mipmap/ic_rate"
            android:title="@string/disease_find" />
        <item
            android:id="@+id/nav_knowledge"
            android:icon="@mipmap/ic_rate"
            android:title="@string/health_knowledge" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_about"
            android:title="@string/about" />
    </group>
</menu>