<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:background="@drawable/bg_logo"
        android:orientation="vertical"
        android:elevation="4dp" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/about_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:text="@string/about_appname"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_version"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/bg_logo"
        android:padding="10dp"
        android:elevation="3dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="10dp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:text="@string/author"/>

        <Button
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="10dp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:text="@string/contact"/>
        <Button
            android:id="@+id/introduce"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="10dp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:text="@string/introduce"/>
    </LinearLayout>
</LinearLayout>
